Fixed logo visibility

--- a/docs/templates/material/styles/main.css
+++ b/docs/templates/material/styles/main.css
@@ -132,6 +132,10 @@ article h4 {
   color: var(--header-ft-color);
 }
 
+.navbar-brand > svg {
+  height: inherit;
+}
+
 .navbar {
   border: none;
   /* Both navbars use box-shadow */
